--- a/Lab Assignment 5 (LL(1) predictive parser, 17.09)/.vscode/settings.json
+++ b/Lab Assignment 5 (LL(1) predictive parser, 17.09)/.vscode/settings.json
@@ -13,6 +13,7 @@
         "string_view": "cpp",
         "initializer_list": "cpp",
         "regex": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "thread": "cpp"
     }
 }
